Fixed spacing

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -9,7 +9,7 @@
 
 .empower {
   text-align: center;
-  padding: 1em;
+  padding: 0.5em 20.5em;
 }
 
 .uploads {
